cancel load more feature

--- a/index.html
+++ b/index.html
@@ -254,14 +254,14 @@
 
             </div>
           </div>
-          <div class="scroll-up-down">
+          <!-- <div class="scroll-up-down">
             <span class="btn btn-danger px-2 load-more mx-auto">
             Load More
           </span>
           <span class="btn btn-danger px-4 fold-btn mx-auto mx-auto d-none">
             Fold Up
           </span>
-          </div>
+          </div> -->
           
         </div>
         <!-- purchase section end -->
